[gd_scene load_steps=7 format=3 uid="uid://b465sei327g5c"]

[ext_resource type="Script" path="res://UI/merchants/merchant-resource-ui.gd" id="1_5dpjm"]
[ext_resource type="Texture2D" uid="uid://bmw5w0b76rnby" path="res://assets/UI/panel.png" id="2_yjkvo"]
[ext_resource type="Texture2D" uid="uid://b45tne1j27r55" path="res://assets/resources/Gold.png" id="3_2742o"]
[ext_resource type="Texture2D" uid="uid://dxo2v084dvg4q" path="res://assets/resources/Inventory.png" id="4_p61hr"]
[ext_resource type="Texture2D" uid="uid://ckapk1e64g3or" path="res://assets/other/left-arrow.png" id="5_jeafn"]
[ext_resource type="Texture2D" uid="uid://bntfyai5m73if" path="res://assets/other/right-arrow.png" id="6_4y25c"]

[node name="MerchantResourceUI" type="PanelContainer"]
custom_minimum_size = Vector2(800, 50)
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -25.0
offset_right = 600.0
offset_bottom = 25.0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("1_5dpjm")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_yjkvo")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
layout_mode = 2
offset_left = 13.0
offset_top = 13.0
offset_right = 671.0
offset_bottom = 36.0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Texture" type="TextureRect" parent="NinePatchRect/HBoxContainer/HBoxContainer"]
layout_mode = 2
expand_mode = 2

[node name="Name" type="Label" parent="NinePatchRect/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/HBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("3_2742o")
expand_mode = 2

[node name="Cost" type="Label" parent="NinePatchRect/HBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="NinePatchRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Texture" type="TextureRect" parent="NinePatchRect/HBoxContainer/HBoxContainer4"]
layout_mode = 2
texture = ExtResource("4_p61hr")
expand_mode = 2

[node name="InventoryAmount" type="Label" parent="NinePatchRect/HBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="NinePatchRect/HBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/HBoxContainer/HBoxContainer3/PanelContainer"]
layout_mode = 2
texture = ExtResource("5_jeafn")
expand_mode = 2

[node name="LessButton" type="Button" parent="NinePatchRect/HBoxContainer/HBoxContainer3/PanelContainer"]
layout_mode = 2
flat = true

[node name="PurchaseAmount" type="Label" parent="NinePatchRect/HBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="NinePatchRect/HBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/HBoxContainer/HBoxContainer3/PanelContainer2"]
layout_mode = 2
texture = ExtResource("6_4y25c")
expand_mode = 2

[node name="MoreButton" type="Button" parent="NinePatchRect/HBoxContainer/HBoxContainer3/PanelContainer2"]
layout_mode = 2
flat = true

[connection signal="pressed" from="NinePatchRect/HBoxContainer/HBoxContainer3/PanelContainer/LessButton" to="." method="_on_less_button_pressed"]
[connection signal="pressed" from="NinePatchRect/HBoxContainer/HBoxContainer3/PanelContainer2/MoreButton" to="." method="_on_more_button_pressed"]
